Fix css colors accesibility contrast

--- a/public/css/main/z_app.css
+++ b/public/css/main/z_app.css
@@ -19,7 +19,7 @@ h2 {
 }
 
 a, a:visited {
-  color: #00a1cb;
+  color: #079;
   text-decoration: none;
 }
 
